New i18n properties and lbl+input in the view

--- a/fiori_report_278/webapp/i18n/i18n.properties
+++ b/fiori_report_278/webapp/i18n/i18n.properties
@@ -9,3 +9,15 @@ appTitle=Fiori Report
 appDescription=Fiori Report
 #XTIT: Main view title
 title=Fiori Report
+
+# Customer information
+titleCustomers=Register customer
+lblCustomer=Customer name
+placeholderCustomer=Fill in the customer name
+lblAddress=Address
+placeholderCustomerAddresss=Fill in the customer address
+lblCustomerCity=City
+placeholderCustomerCity=Fill in the customer city
+lblCustomerState=State
+placeholderCustomerState=Fill in the customer state
+btnSend=Send the data
