Read the form data and display in a MessageBox

--- a/fiori_report_278/webapp/i18n/i18n.properties
+++ b/fiori_report_278/webapp/i18n/i18n.properties
@@ -21,3 +21,4 @@ placeholderCustomerCity=Fill in the customer city
 lblCustomerState=State
 placeholderCustomerState=Fill in the customer state
 btnSend=Send the data
+msgConfirmation=Do you want to send the information: Customer: {0}, City: {1}, State: {2}?
