--- a/fiori_report_278/webapp/i18n/i18n_de.properties
+++ b/fiori_report_278/webapp/i18n/i18n_de.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for br.com.gestao.fioriappreport100
+# This is the resource bundle for br.com.cliente.gestao.fiorireport278
 
 #Texts for manifest.json
 
@@ -6,27 +6,20 @@
 appTitle=Fiori Report
 
 #YDES: Application description
-appDescription=Fiori App Gestão Report
-
+appDescription=Fiori Report
 #XTIT: Main view title
-title=Fiori Report Rodando a App
+title=Fiori Report
 
 
-# Informações Clientes
-titleCustomers= Kundenbasis
-
-lblCustomer = Kundenname
-placeholderCustomer = Geben Sie den Namen Kunde ein
-
-lblAddress = Adresse
-placeholderCustomerAddresss = Geben Sie die Adresse des Kunden ein
-
-lblCustomerCity = Stadt
-placeholderCustomerCity = Informieren Sie die Stadt
-
-lblCustomerState = Zustand
-placeholderCustomerState = Staat informieren
-
-btnSend = Anmeldung absenden
-
-msgConfirmation = Möchten Sie die Informationen senden: Kunde {0}, Stadt {1} und Bundesland {2}?
+# Customer information
+titleCustomers=Kundenbasis
+lblCustomer=Kundenname
+placeholderCustomer=Geben Sie den Namen Kunde ein
+lblAddress=Adresse
+placeholderCustomerAddress=Geben Sie die Adresse des Kunden ein
+lblCustomerCity=Stadt
+placeholderCustomerCity=Informieren Sie die Stadt
+lblCustomerState=Zustand
+placeholderCustomerState=Staat informieren
+btnSend=Anmeldung absenden
+msgConfirmation=Möchten Sie die Informationen senden: Kunde {0}, Stadt {1} und Bundesland {2}?
