--- a/fiori_report_278/webapp/i18n/i18n_fr.properties
+++ b/fiori_report_278/webapp/i18n/i18n_fr.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for br.com.gestao.fioriappreport100
+# This is the resource bundle for br.com.cliente.gestao.fiorireport278
 
 #Texts for manifest.json
 
@@ -6,27 +6,19 @@
 appTitle=Fiori Report
 
 #YDES: Application description
-appDescription=Fiori App Gestão Report
-
+appDescription=Fiori Report
 #XTIT: Main view title
-title=Fiori Report Rodando a App
+title=Fiori Report
 
-
-# Informações Clientes
-titleCustomers = Clientèle
-
-lblCustomer = Nom du client
-placeholderCustomer = Entrez le nom Client..
-
-lblAddress = Adresse
-placeholderCustomerAddresss = Entrez l'adresse du client
-
-lblCustomerCity = Ville
-placeholderCustomerCity = Informer la Ville
-
-lblCustomerState = Etat
-placeholderCustomerState = informer l'état
-
-btnSend = Proposez enregistrement
-
-msgConfirmation = Souhaitez-vous envoyer les informations : Client {0}, Ville {1} et État {2} ?
+# Customer information
+titleCustomers=Clientèle
+lblCustomer=Nom du client
+placeholderCustomer=Entrez le nom Client..
+lblAddress=Adresse
+placeholderCustomerAddress=Entrez l'adresse du client
+lblCustomerCity=Ville
+placeholderCustomerCity=Informer la Ville
+lblCustomerState=Etat
+placeholderCustomerState=informer l'état
+btnSend=Proposez enregistrement
+msgConfirmation=Souhaitez-vous envoyer les informations : Client {0}, Ville {1} et État {2} ?
