--- a/fiori_report_278/webapp/i18n/i18n_pt.properties
+++ b/fiori_report_278/webapp/i18n/i18n_pt.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for br.com.gestao.fioriappreport100
+# This is the resource bundle for br.com.cliente.gestao.fiorireport278
 
 #Texts for manifest.json
 
@@ -6,27 +6,19 @@
 appTitle=Fiori Report
 
 #YDES: Application description
-appDescription=Fiori App Gestão Report
-
+appDescription=Fiori Report
 #XTIT: Main view title
-title=Fiori Report Rodando a App
+title=Fiori Report
 
-
-# Informações Clientes
-titleCustomers = Cadastro de Clientes (Arquivo PT)
-
-lblCustomer = Nome Cliente
-placeholderCustomer = Informe o nome do Cliente
-
-lblAddress = Endereço
-placeholderCustomerAddresss = Informe o endereço do Cliente
-
-lblCidadeCliente = Cidade
-placeholderCustomerCity = Informe a cidade base do Cliente
-
-lblCustomerState = Estado
-placeholderCustomerState = Informe o estado do Cliente
-
-btnSend = Enviar Cadastro
-
-msgConfirmation = Deseja enviar as informações: Cliente: {0}, Cidade: {1} e Estado {2}?
+# Customer information
+titleCustomers=Cadastro de Clientes (Arquivo PT)
+lblCustomer=Nome Cliente
+placeholderCustomer=Informe o nome do Cliente
+lblAddress=Endereço
+placeholderCustomerAddresss=Informe o endereço do Cliente
+lblCustomerCity=Cidade
+placeholderCustomerCity=Informe a cidade base do Cliente
+lblCustomerState=Estado
+placeholderCustomerState=Informe o estado do Cliente
+btnSend=Enviar Cadastro
+msgConfirmation=Deseja enviar as informações: Cliente: {0}, Cidade: {1} e Estado {2}?
