adding internationalization to list view

--- a/fiori_report_278/webapp/i18n/i18n.properties
+++ b/fiori_report_278/webapp/i18n/i18n.properties
@@ -3,14 +3,41 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Fiori Report
+appTitle=Products management
 
 #YDES: Application description
-appDescription=Fiori Report
+appDescription=Products management
 #XTIT: Main view title
-title=Fiori Report
+title=Products management
 
-# Customer information
+#--- List View ---
+#Titles
+headingTitle=Products report
+headingTitleSnappedContent=Products management by status
+
+#Filter bar
+fgItemProductID=Product Id
+fgItemProductTooltip=Fill in the product number
+fgItemProductGroup=Principal
+fgItemProductPlaceholder=Fill in the product number
+fgItemProductName=Product name
+fgItemProductNameTooltip=Fill in the product name
+fgItemProductNameGroup=Principal
+fgItemProductNamePlaceholder=Fill in the product name
+
+#Table
+tbNoData=No products
+tbColumnLogo=Logo
+tbColumnProductID=Product Id
+tbColumnName=Product
+tbColumnCategory=Category
+tbColumnSupplierID=Supplier Id
+tbColumnUoM=Unit of Measure
+tbColumnPrice=Price
+tbColumnStatus=Status
+tbColumnCreationDate=Creation Date
+
+#Customer information
 titleCustomers=Register customer
 lblCustomer=Customer name
 placeholderCustomer=Fill in the customer name
