--- a/fiori_report_278/webapp/i18n/i18n_pt.properties
+++ b/fiori_report_278/webapp/i18n/i18n_pt.properties
@@ -3,12 +3,39 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Fiori Report
+appTitle=Gerenciamento de produtos
 
 #YDES: Application description
-appDescription=Fiori Report
+appDescription=Gerenciamento de produtos
 #XTIT: Main view title
-title=Fiori Report
+title=Gerenciamento de produtos
+
+#--- List View ---
+#Titles
+headingTitle=Relatório de produtos
+headingTitleSnappedContent=Relatório de produtos por status
+
+#Filter bar
+fgItemProductID=Produto Id
+fgItemProductTooltip=Preencha o número do produto
+fgItemProductGroup=Principal
+fgItemProductPlaceholder=Preencha o número do produto
+fgItemProductName=Nome do produto
+fgItemProductNameTooltip=Preencha o nome do produto
+fgItemProductNameGroup=Principal
+fgItemProductNamePlaceholder=Preencha o nome do produto
+
+#Table
+tbNoData=Sem produtos
+tbColumnLogo=Logo
+tbColumnProductID=Produto Id
+tbColumnName=Produto
+tbColumnCategory=Categoria
+tbColumnSupplierID=Fornecedor Id
+tbColumnUoM=Unidade de Medida
+tbColumnPrice=Preço
+tbColumnStatus=Status
+tbColumnCreationDate=Data de criação
 
 # Customer information
 titleCustomers=Cadastro de Clientes (Arquivo PT)
